--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=asdf
+    u, initial-scale=1.0"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+
+  <body>
+    <div class="w-full p-16 py-6 flex justify-between flex-row items-center">
+      <!-- logo  -->
+      <div>
+        <img
+          src="/img/dd6bf3b2c1032ea805448cdc1e042e46d801adec.png"
+          width="255"
+          alt=""
+        />
+      </div>
+      <!-- nav  -->
+      <div>
+        <a href="#">
+          <button
+            class="text-white font-sans text-[18px] not-italic font-bold leading-normal uppercase"
+          >
+            Home
+          </button>
+        </a>
+      </div>
+      <!-- contact us -->
+      <div>
+        <a href="#">
+          <button class="bg-blue-600 text-white px-4 py-2 rounded-lg">
+            Contact Us
+          </button>
+        </a>
+      </div>
+    </div>
+  </body>
 </html>
