--- a/index.html
+++ b/index.html
@@ -18,30 +18,32 @@
       <div class="w-60">
         <img
           src="/img/dd6bf3b2c1032ea805448cdc1e042e46d801adec.png"
-          width="255"
+          width="180"
           alt=""
         />
       </div>
       <!-- nav  -->
-      <div class="gap-3 flex">
+      <div class="gap-3 flex flex justify-between rid">
         <!-- home -->
         <a href="#">
           <button
-            class=" text-white font-sans text-[18px] not-italic font-bold leading-normal uppercase"
+            class="flex justify-center items-center text-white font-sans text-[18px] not-italic font-bold leading-normal uppercase"
           >
             Home
           </button>
         </a>
+        <div class="w-0.5 bg-gradient-to-b from-red-500 to-black"></div>
         <!-- Features -->
 
         <a href="#">
           <button
-            class="text-gray-400 hover:text-white font-sans text-[18px] not-italic font-light leading-normal uppercase"
+            class="text-gray-400 hover:text-white text-center flex justifc-center items-center font-sans text-[18px] not-italic font-light leading-normal uppercase"
           >
             Features
           </button>
         </a>
 
+        <div class="w-0.5 bg-gradient-to-b from-red-500 to-black"></div>
         <!-- Blog -->
         <a href="#">
           <button
@@ -53,11 +55,13 @@
       </div>
       <!-- contact us -->
       <div class="w-60 flex justify-end items-center gap-3">
+
         <a href="#">
-          <button class=" rounded-xl h-7    text-red-500 border-red-500 px-4 py-2 rounded-lg">
-            Contact Us
-          </button>
+          <div class="button-wrapper">
+            <button class="button">CONTACT US</button>
+          </div>
         </a>
+
         <a href="#" class="">
           <svg
             width="22"
@@ -102,6 +106,7 @@
             </defs>
           </svg>
         </a>
+        
 
         <a href="#">
           <svg
