--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=asdf
-    u, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=asdf u, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Document</title>
@@ -168,6 +164,19 @@
           </svg>
         </a>
       </div>
+    </div>
+    <div class=" p-20 ">
+        <div class="p-8 flex justify-center itmes-center max-w-500  border-white bg-gradient-to-r from-black via-black to-red-900/30 rounded-4xl">
+            <div class="w-200 flex justify-center flex-col items-start">
+                <h1 id=""class="text-5xl py-5 bg-gradient-to-r from-slate-50 to-gray-400 bg-clip-text text-transparent font-thin ">INFORMATION</h1>
+                <h1 class=" text-5xl pb-5 bg-gradient-to-r from-slate-50 to-gray-400 bg-clip-text text-transparent">SECURITY SOLUTION</h1>
+                <p class="text-white opacity-50">Build real-world cybersecurity skills with guided learning paths, hands-on labs, and industry challenges. Practice on live systems, earn certificates, and advance your career.</p>
+
+            </div>
+            <div class="w-96 h-96 flex justify-center items-center">
+                <img src="img/Rectangle 498.png" alt="">
+            </div>
+        </div>
     </div>
   </body>
 </html>
