--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <!--the main body-->
+
+    <!-- head -->
     <div class="w-full p-16 py-6 flex justify-between flex-row items-center">
       <!-- logo  -->
       <div class="w-60">
@@ -51,7 +54,6 @@
       </div>
       <!-- contact us -->
       <div class="w-60 flex justify-end items-center gap-3">
-
         <a href="#">
           <div class="button-wrapper">
             <button class="button">CONTACT US</button>
@@ -102,7 +104,6 @@
             </defs>
           </svg>
         </a>
-        
 
         <a href="#">
           <svg
@@ -165,18 +166,265 @@
         </a>
       </div>
     </div>
-    <div class=" p-20 ">
-        <div class="p-8 flex justify-center itmes-center max-w-500  border-white bg-gradient-to-r from-black via-black to-red-900/30 rounded-4xl">
-            <div class="w-200 flex justify-center flex-col items-start">
-                <h1 id=""class="text-5xl py-5 bg-gradient-to-r from-slate-50 to-gray-400 bg-clip-text text-transparent font-thin ">INFORMATION</h1>
-                <h1 class=" text-5xl pb-5 bg-gradient-to-r from-slate-50 to-gray-400 bg-clip-text text-transparent">SECURITY SOLUTION</h1>
-                <p class="text-white opacity-50">Build real-world cybersecurity skills with guided learning paths, hands-on labs, and industry challenges. Practice on live systems, earn certificates, and advance your career.</p>
 
-            </div>
-            <div class="w-96 h-96 flex justify-center items-center">
-                <img src="img/Rectangle 498.png" alt="">
-            </div>
+    <!-- con-1  -->
+    <div class="p-20">
+      <div
+        class="p-8 flex justify-center itmes-center max-w-500 border-white bg-gradient-to-r from-black via-black to-red-900/30 rounded-4xl"
+      >
+        <div class="w-200 flex justify-center flex-col items-start">
+          <h1
+            id=""
+            class="text-5xl py-5 bg-gradient-to-r from-slate-50 to-gray-400 bg-clip-text text-transparent font-thin"
+          >
+            INFORMATION
+          </h1>
+          <h1
+            class="text-5xl pb-5 bg-gradient-to-r from-slate-50 to-gray-400 bg-clip-text text-transparent"
+          >
+            SECURITY SOLUTION
+          </h1>
+          <p class="text-white opacity-50 max-w-130">
+            Build real-world cybersecurity skills with guided learning paths,
+            hands-on labs, and industry challenges. Practice on live systems,
+            earn certificates, and advance your career.
+          </p>
         </div>
+        <div class="w-96 h-96 flex justify-center items-center">
+          <img src="img/Rectangle 498.png" alt="" />
+        </div>
+      </div>
+      <div class="flex flex-row gap-10 pt-10 justify-center itmes-center">
+        <div class="flex flex-row gap-3 justify-center itmes-center">
+          <svg
+            width="30"
+            height="34"
+            viewBox="0 0 34 34"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path d="M25.5 25.5H8.5V8.5L25.5 25.5Z" fill="#404040" />
+            <path
+              d="M34 0H0L8.5 8.5L25.5 8.5L25.5 25.5L34 34V0Z"
+              fill="#E0003B"
+            />
+          </svg>
+          <p class="text-white opacity-50 pt-1">“Incident Response”</p>
+        </div>
+
+        <div class="flex flex-row gap-3 justify-center itmes-center">
+          <svg
+            width="40"
+            height="38"
+            viewBox="0 0 49 49"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M24.076 3.90343C29.7067 3.91301 34.2627 9.01845 34.252 15.2489L34.2327 26.5771L13.8421 26.5424L13.8614 15.2142C13.872 8.98374 18.4453 3.89384 24.076 3.90343Z"
+              fill="#E0003B"
+            />
+            <path
+              d="M34.2132 37.9052L13.8225 37.8705C13.8332 31.6142 18.4064 26.5502 24.0372 26.5597C29.6679 26.5693 34.2238 31.6489 34.2132 37.9052Z"
+              fill="#404040"
+            />
+            <path
+              d="M44.428 26.5944L24.0374 26.5597C24.048 20.3033 28.6213 15.2393 34.252 15.2489C39.8827 15.2585 44.4387 20.338 44.428 26.5944Z"
+              fill="#E0003B"
+            />
+            <path
+              d="M24.0374 26.5597L3.64675 26.525C3.65741 20.2687 8.23065 15.2047 13.8614 15.2142C19.4921 15.2238 24.0481 20.3034 24.0374 26.5597Z"
+              fill="#E0003B"
+            />
+          </svg>
+
+          <p class="text-white opacity-50 pt-1">“Incident Response”</p>
+        </div>
+
+        <div class="flex flex-row gap-3 justify-center itmes-center">
+          <svg
+            width="34"
+            height="34"
+            viewBox="0 0 34 34"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M0 0H17C26.3888 0 34 7.61116 34 17H17C7.61116 17 0 9.38884 0 0Z"
+              fill="#E0003B"
+            />
+            <path
+              d="M0 17H17C26.3888 17 34 24.6112 34 34H17C7.61116 34 0 26.3888 0 17Z"
+              fill="#404040"
+            />
+          </svg>
+
+          <p class="text-white opacity-50 pt-1">“Incident Response”</p>
+        </div>
+
+        <div class="flex flex-row gap-3 justify-center itmes-center">
+          <svg
+            width="30"
+            height="34"
+            viewBox="0 0 30 34"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path d="M15 0V34L0.125 25.5V8.5L15 0Z" fill="#E0003B" />
+            <path d="M29.875 0V34L15 25.5V8.5L29.875 0Z" fill="#404040" />
+          </svg>
+
+          <p class="text-white opacity-50 pt-1">“Incident Response”</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- con-2  -->
+    <div class="h-170 flex flex-col justify-center itmes-center">
+      <!-- title -->
+      <div class="flex justify-center items-center pt-10">
+        <svg
+          width="120"
+          height="46"
+          viewBox="0 0 179 46"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M115.5 23.5234C115.5 11.6748 125.15 1.02344 136.421 1.02344M115.5 23.5234C115.5 11.6748 125.13 1.02344 136.421 1.02344M115.5 23.5234H1M115.5 23.5234C115.5 35.9497 125 45.0234 136.421 44.9769M115.5 23.5234C115.5 36.0234 125 45.0234 136.421 44.9769M136.421 1.02344H178.5M136.421 44.9769H178.5"
+            stroke="url(#paint0_linear_624_47022)"
+            stroke-linecap="round"
+          />
+          <defs>
+            <linearGradient
+              id="paint0_linear_624_47022"
+              x1="1.5"
+              y1="23.0002"
+              x2="178.5"
+              y2="23.0003"
+              gradientUnits="userSpaceOnUse"
+            >
+              <stop stop-color="#E0003B" stop-opacity="0" />
+              <stop offset="0.47" stop-color="#E0003B" />
+              <stop offset="1" stop-color="#E0003B" stop-opacity="0" />
+            </linearGradient>
+          </defs>
+        </svg>
+        <h2 class="text-white text-xs tracking-[.35em]">UNLOCK THE POWER OF</h2>
+        <svg
+          width="120"
+          height="46"
+          viewBox="0 0 179 46"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M63.5 23.5234C63.5 11.6748 53.8502 1.02344 42.5786 1.02344M63.5 23.5234C63.5 11.6748 53.8703 1.02344 42.5786 1.02344M63.5 23.5234H178M63.5 23.5234C63.5 35.9497 54 45.0234 42.5786 44.9769M63.5 23.5234C63.5 36.0234 54 45.0234 42.5786 44.9769M42.5786 1.02344H0.5M42.5786 44.9769H0.5"
+            stroke="url(#paint0_linear_624_47021)"
+            stroke-linecap="round"
+          />
+          <defs>
+            <linearGradient
+              id="paint0_linear_624_47021"
+              x1="177.5"
+              y1="23.0002"
+              x2="0.499966"
+              y2="23.0003"
+              gradientUnits="userSpaceOnUse"
+            >
+              <stop stop-color="#E0003B" stop-opacity="0" />
+              <stop offset="0.47" stop-color="#E0003B" />
+              <stop offset="1" stop-color="#E0003B" stop-opacity="0" />
+            </linearGradient>
+          </defs>
+        </svg>
+      </div>
+      <!-- ----- -->
+
+      <h1
+        class="bg-gradient-to-r from-slate-50 to-gray-500 bg-clip-text text-transparent text-5xl font- -tracking-[.1em] text-center pt-5"
+      >
+        CYBER AGENCY FEATURES
+      </h1>
+
+      <div class="flex p-20 justify-between items-center gap-10">
+        <div
+          class="p-0.5 rounded-4xl w-80 h-80 bg-gradient-to-tl from-black via-black to-red-600"
+        >
+          <div class="rounded-4xl w-full h-full bg-black">
+            <div class="pl-8 pt-9 gap-2 flex flex-col">
+              <h4 class="text-white opacity-80 text-xl font-semibold">
+                Threat Detection &<br />
+                Monitoring
+              </h4>
+              <p
+                class="text-white text-2xs font-normal opacity-40 text-base/5 ..."
+              >
+                Continuous real-time monitoring to identify and block cyber
+                threats before they cause harm.
+              </p>
+              <p
+                class="pt-8 text-white text-2xs font-normal opacity-99 text-base/5 ..."
+              >
+                Learn More →
+              </p>
+            </div>
+
+            <img class="-mt-35" src="img/Frame 47429.png" alt="" />
+          </div>
+        </div>
+
+        <div
+          class="p-0.5 rounded-4xl w-80 h-80 bg-gradient-to-tl from-black via-black to-red-600"
+        >
+          <div class="rounded-4xl w-full h-full bg-black">
+            <div class="pl-8 pt-9 gap-2 flex flex-col">
+              <h4 class="text-white opacity-80 text-xl font-semibold">
+                Incident Response & <br />
+                Recovery
+              </h4>
+              <p
+                class="text-white text-2xs font-normal opacity-40 text-base/5 ..."
+              >
+                Immediate action and expert support to contain breaches, recover data, and restore operations.
+              </p>
+              <p
+                class="pt-8 text-white text-2xs font-normal opacity-99 text-base/5 ..."
+              >
+                Learn More →
+              </p>
+            </div>
+
+            <img class="-mt-35" src="img/Frame 47429.png" alt="" />
+          </div>
+        </div>
+
+        <div
+          class="p-0.5 rounded-4xl w-80 h-80 bg-gradient-to-tl from-black via-black to-red-600"
+        >
+          <div class="rounded-4xl w-full h-full bg-black">
+            <div class="pl-8 pt-9 gap-2 flex flex-col">
+              <h4 class="text-white opacity-80 text-xl font-semibold">
+                Security Assessment & <br />
+                Compliance
+              </h4>
+              <p
+                class="text-white text-2xs font-normal opacity-40 text-base/5 ..."
+              >
+                Continuous real-time monitoring to identify and block cyber
+                threats before they cause harm.
+              </p>
+              <p
+                class="pt-8 text-white text-2xs font-normal opacity-99 text-base/5 ..."
+              >
+                Learn More →
+              </p>
+            </div>
+
+            <img class="-mt-35" src="img/Frame 47429.png" alt="" />
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
