--- a/index.html
+++ b/index.html
@@ -539,6 +539,22 @@
     </div>
         </div>
     </div>
+
+    <!-- con-4 -->
+    <div class="flex justify-center w-full itmes-center flex-row box-border">
+        <div class="flex justify-center -ml-90">
+            <img src="img/Frame 47434.png" alt="">
+        </div>
+        <div class=" flex justify-center itmes-center">
+            <img  class="w-200 h-10" src="img/Frame 141.png"width="900px" alt="">
+        </div>
+        <div class="flex -mr-30">
+            <img src="img/Frame 47433.png"  alt="">
+        </div>
+
+
+    </div>
+
   </div>
   </body> 
 </html>
