--- a/index.html
+++ b/index.html
@@ -541,15 +541,15 @@
     </div>
 
     <!-- con-4 -->
-    <div class="flex justify-center w-full itmes-center flex-row box-border">
-        <div class="flex justify-center -ml-90">
-            <img src="img/Frame 47434.png" alt="">
+    <div class="flex justify-between w-full itmes-center flex-row box-border">
+        <div class="flex justify-start   ">
+            <img class="-mr-100" src="img/Frame 47434.png" alt="">
         </div>
-        <div class=" flex justify-center itmes-center">
-            <img  class="w-200 h-10" src="img/Frame 141.png"width="900px" alt="">
+        <div class=" flex flex-row justify-center w-300 items-center">
+            <img  class="    " src="img/Frame 141.png" alt="">
         </div>
-        <div class="flex -mr-30">
-            <img src="img/Frame 47433.png"  alt="">
+        <div class="flex justify-end   ">
+            <img class="-ml-100" src="img/Frame 47433.png"  alt="">
         </div>
 
 
