--- a/index.html
+++ b/index.html
@@ -543,17 +543,223 @@
     <!-- con-4 -->
     <div class="flex justify-between w-full itmes-center flex-row box-border">
         <div class="flex justify-start   ">
-            <img class="-mr-100" src="img/Frame 47434.png" alt="">
+            <img class="" src="img/ball-left.png" alt="">
         </div>
         <div class=" flex flex-row justify-center w-300 items-center">
             <img  class="    " src="img/Frame 141.png" alt="">
         </div>
         <div class="flex justify-end   ">
-            <img class="-ml-100" src="img/Frame 47433.png"  alt="">
+            <img class="" src="img/ball-right.png"  alt="">
         </div>
 
 
     </div>
+    
+    <!-- con-5 -->
+    <div class="flex  w-full justify-center  items-start  flex-row ">
+
+      <div class="flex flex-col justify-start items-start">
+
+        <!-- title -->
+        <div class="flex justify-center items-center">
+          <svg
+            width="120"
+            height="46"
+            viewBox="0 0 179 46"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M115.5 23.5234C115.5 11.6748 125.15 1.02344 136.421 1.02344M115.5 23.5234C115.5 11.6748 125.13 1.02344 136.421 1.02344M115.5 23.5234H1M115.5 23.5234C115.5 35.9497 125 45.0234 136.421 44.9769M115.5 23.5234C115.5 36.0234 125 45.0234 136.421 44.9769M136.421 1.02344H178.5M136.421 44.9769H178.5"
+              stroke="url(#paint0_linear_624_47022)"
+              stroke-linecap="round"
+            />
+            <defs>
+              <linearGradient
+                id="paint0_linear_624_47022"
+                x1="1.5"
+                y1="23.0002"
+                x2="178.5"
+                y2="23.0003"
+                gradientUnits="userSpaceOnUse"
+              >
+                <stop stop-color="#E0003B" stop-opacity="0" />
+                <stop offset="0.47" stop-color="#E0003B" />
+                <stop offset="1" stop-color="#E0003B" stop-opacity="0" />
+              </linearGradient>
+            </defs>
+          </svg>
+          <h2 class="text-white text-xs tracking-[.35em]">COMMUNITY</h2>
+
+          <svg
+            width="120"
+            height="46"
+            viewBox="0 0 179 46"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M63.5 23.5234C63.5 11.6748 53.8502 1.02344 42.5786 1.02344M63.5 23.5234C63.5 11.6748 53.8703 1.02344 42.5786 1.02344M63.5 23.5234H178M63.5 23.5234C63.5 35.9497 54 45.0234 42.5786 44.9769M63.5 23.5234C63.5 36.0234 54 45.0234 42.5786 44.9769M42.5786 1.02344H0.5M42.5786 44.9769H0.5"
+              stroke="url(#paint0_linear_624_47021)"
+              stroke-linecap="round"
+            />
+            <defs>
+              <linearGradient
+                id="paint0_linear_624_47021"
+                x1="177.5"
+                y1="23.0002"
+                x2="0.499966"
+                y2="23.0003"
+                gradientUnits="userSpaceOnUse"
+              >
+                <stop stop-color="#E0003B" stop-opacity="0" />
+                <stop offset="0.47" stop-color="#E0003B" />
+                <stop offset="1" stop-color="#E0003B" stop-opacity="0" />
+              </linearGradient>
+            </defs>
+          </svg>
+        </div>
+
+         <h1 class="bg-gradient-to-r from-slate-50 to-gray-500 bg-clip-text text-transparent text-5xl font- -tracking-[.1em] text-center pt-5">
+           JOIN OUR COMMUNITY 
+        </h1>
+
+          <p class="text-white pt-2 text-xs opacity-40 justify-end pr-20  ">Be part of a growing network of cybersecurity <br> professionals, businesses, and tech enthusiasts. </p>
+            <div class="pt-10">      
+              <a href="#">
+                <div class="button-wrapper ">
+                    <button class="button">CONTACT US</button>
+                </div>
+              </a>
+            </div>
+      </div>
+
+
+
+      <div class="flex pt-20 flex-col justify-end w-150 items-end ">
+          <p class="text-white text-xs opacity-40 justify-end pr-20  ">Stay informed with the latest threat insights, security tips, and exclusive  <br>updates from our team. Together, we build a safer digital world.</p>
+        <img src="img/Join Communtiy.png" alt="">
+      </div>
+
+
+    </div>
+
+
+    <!-- con-6 -->
+
+    <div class="flex flex-row w-full justify-center  items-center  ">
+
+      <div class=" pl-30">
+        <img class="w-100" src="img/Rectangle 498.png" alt="">
+      </div>
+
+      <div class="flex flex-col justify-center h-full w-170 ">
+        <h1 class="bg-gradient-to-r from-slate-50 to-gray-500 bg-clip-text text-transparent text-5xl font- -tracking-[.1em] text-start pt-5">
+          PROTECT YOUR BUSINESS 
+        </h1>
+        <p class="text-white pt-2 text-xs opacity-40 justify-end   ">Cyber threats are evolving — is your security keeping up? Partner with [Cyber Agency] for expert cybersecurity <br> solutions that safeguard your data, networks, and reputation 24/7. Get a free security assessment today and<br> stay one step ahead of hackers! </p>
+        <div class="pt-10">      
+          <a href="#">
+            <div class="button-wrapper ">
+                <button class="demo">Try Demo</button>
+            </div>
+          </a>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- con-7 -->
+    <div class="flex  pt-40 w-full justify-center  items-start  flex-row ">
+
+      <div class="flex flex-col justify-start items-start">
+
+        <!-- title -->
+        <div class="flex justify-center items-center">
+          <svg
+            width="120"
+            height="46"
+            viewBox="0 0 179 46"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M115.5 23.5234C115.5 11.6748 125.15 1.02344 136.421 1.02344M115.5 23.5234C115.5 11.6748 125.13 1.02344 136.421 1.02344M115.5 23.5234H1M115.5 23.5234C115.5 35.9497 125 45.0234 136.421 44.9769M115.5 23.5234C115.5 36.0234 125 45.0234 136.421 44.9769M136.421 1.02344H178.5M136.421 44.9769H178.5"
+              stroke="url(#paint0_linear_624_47022)"
+              stroke-linecap="round"
+            />
+            <defs>
+              <linearGradient
+                id="paint0_linear_624_47022"
+                x1="1.5"
+                y1="23.0002"
+                x2="178.5"
+                y2="23.0003"
+                gradientUnits="userSpaceOnUse"
+              >
+                <stop stop-color="#E0003B" stop-opacity="0" />
+                <stop offset="0.47" stop-color="#E0003B" />
+                <stop offset="1" stop-color="#E0003B" stop-opacity="0" />
+              </linearGradient>
+            </defs>
+          </svg>
+          <h2 class="text-white text-xs tracking-[.35em]">COMMUNITY</h2>
+
+          <svg
+            width="120"
+            height="46"
+            viewBox="0 0 179 46"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M63.5 23.5234C63.5 11.6748 53.8502 1.02344 42.5786 1.02344M63.5 23.5234C63.5 11.6748 53.8703 1.02344 42.5786 1.02344M63.5 23.5234H178M63.5 23.5234C63.5 35.9497 54 45.0234 42.5786 44.9769M63.5 23.5234C63.5 36.0234 54 45.0234 42.5786 44.9769M42.5786 1.02344H0.5M42.5786 44.9769H0.5"
+              stroke="url(#paint0_linear_624_47021)"
+              stroke-linecap="round"
+            />
+            <defs>
+              <linearGradient
+                id="paint0_linear_624_47021"
+                x1="177.5"
+                y1="23.0002"
+                x2="0.499966"
+                y2="23.0003"
+                gradientUnits="userSpaceOnUse"
+              >
+                <stop stop-color="#E0003B" stop-opacity="0" />
+                <stop offset="0.47" stop-color="#E0003B" />
+                <stop offset="1" stop-color="#E0003B" stop-opacity="0" />
+              </linearGradient>
+            </defs>
+          </svg>
+        </div>
+
+         <h1 class="bg-gradient-to-r from-slate-50 to-gray-500 bg-clip-text text-transparent text-5xl font- -tracking-[.1em] text-center pt-5">
+           JOIN OUR COMMUNITY 
+        </h1>
+
+          <p class="text-white pt-2 text-xs opacity-40 justify-end pr-20  ">Be part of a growing network of cybersecurity <br> professionals, businesses, and tech enthusiasts. </p>
+            <div class="pt-10">      
+              <a href="#">
+                <div class="button-wrapper ">
+                    <button class="button">CONTACT US</button>
+                </div>
+              </a>
+            </div>
+      </div>
+
+
+
+      <div class="flex pt-20 flex-col justify-end w-150 items-end ">
+          <p class="text-white text-xs opacity-40 justify-end pr-20  ">Stay informed with the latest threat insights, security tips, and exclusive  <br>updates from our team. Together, we build a safer digital world.</p>
+        <img src="img/Join Communtiy.png" alt="">
+      </div>
+
+
+    </div>
+
+
+
 
   </div>
   </body> 
