--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
     <!-- con-7 -->
     <div class="flex  pt-40 w-full justify-center  items-start  flex-row ">
 
-      <div class="flex flex-col justify-start items-start">
+      <div class="flex flex-col justify-start items-start gap-3">
 
         <!-- title -->
         <div class="flex justify-center items-center">
@@ -703,7 +703,7 @@
               </linearGradient>
             </defs>
           </svg>
-          <h2 class="text-white text-xs tracking-[.35em]">COMMUNITY</h2>
+          <h2 class="text-white text-xs tracking-[.35em]">VOICE OF THE FUTURE</h2>
 
           <svg
             width="120"
@@ -734,11 +734,13 @@
           </svg>
         </div>
 
-         <h1 class="bg-gradient-to-r from-slate-50 to-gray-500 bg-clip-text text-transparent text-5xl font- -tracking-[.1em] text-center pt-5">
-           JOIN OUR COMMUNITY 
+         <h1 class=" pb-4 bg-gradient-to-r from-slate-50 to-gray-500 bg-clip-text text-transparent text-5xl font- -tracking-[.1em] text-center pt-5">
+           PARTNER'S EXPERIENCES 
         </h1>
 
-          <p class="text-white pt-2 text-xs opacity-40 justify-end pr-20  ">Be part of a growing network of cybersecurity <br> professionals, businesses, and tech enthusiasts. </p>
+        <div class="w-90  h-1 bg-gradient-to-r from-gray-500 to-slate-50 opacity-50  "></div>
+
+          <p class="text-white pt-2 w-150 text-xs opacity-40 justify-end pr-20  ">Here, you’ll hear firsthand from users, cybersecurity pioneers, and tech enthusiasts who are shaping the future of digital security. Explore their stories and discover how we are transforming the way people protect, connect, and thrive in the digital world. </p>
             <div class="pt-10">      
               <a href="#">
                 <div class="button-wrapper ">
