--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
     </div>
 
     <!-- con-4 -->
-    <div class="flex justify-between w-full itmes-center flex-row box-border">
+    <div class="flex justify-between -my-40 w-full itmes-center flex-row box-border">
         <div class="flex justify-start   ">
             <img class="" src="img/ball-left.png" alt="">
         </div>
@@ -670,7 +670,7 @@
     </div>
 
     <!-- con-7 -->
-    <div class="flex  pt-40 w-full justify-center  items-start  flex-row ">
+    <div class="flex  py-40 w-full justify-center  items-start  flex-row ">
 
       <div class="flex flex-col justify-start items-start gap-3">
 
@@ -751,11 +751,227 @@
       </div>
 
 
+      <!-- prof-cards -->
 
-      <div class="flex pt-20 flex-col justify-end w-150 items-end ">
-          <p class="text-white text-xs opacity-40 justify-end pr-20  ">Stay informed with the latest threat insights, security tips, and exclusive  <br>updates from our team. Together, we build a safer digital world.</p>
-        <img src="img/Join Communtiy.png" alt="">
+      <div class="flex pt-4  gap-4 flex-col justify-end w-150 items-end ">
+
+         <div class="p-[1px]  rounded-4xl w-100 h-40 bg-gradient-to-bl from-black via-black to-red-600" >
+
+          <div class="flex gap-3 flex-row justify-center items-center  rounded-4xl w-full h-full bg-black bg-gradient-to-tr from-black via-black to-red-900">
+            <div class="  gap-7 flex flex-col">
+              <p class="text-white text-xs font-normal opacity-40 text-base/5">
+                Their advanced solutions made <br> protecting our systems easier than ever.
+              </p>
+              <p
+                class="text-white text-l font-normal opacity-70 text-base/5 ..."
+              >
+                Samantha Leonardo              </p>
+            </div>
+          <!-- profiles -->
+            <div class="flex justify-center w-20 h-20">
+              <img  src="img/Emp-1.png" alt="">
+            </div>
+
+          </div>
+
+          </div>
+
+          <div class="p-[1px]  rounded-4xl w-100 h-40 bg-gradient-to-tl from-black via-black to-red-600" >
+
+          <div class="flex gap-3 flex-row justify-center items-center  rounded-4xl w-full h-full bg-black bg-gradient-to-br from-black via-black to-red-900">
+            <div class="  gap-7 flex flex-col">
+              <p class="text-white text-xs font-normal opacity-40 text-base/5">
+                Cyber Agency helped secure my company’s <br> data and strengthened customer trust.              </p>
+              <p
+                class="text-white text-l font-normal opacity-70 text-base/5 ...">James Rizaki</p>
+            </div>
+          <!-- profiles -->
+            <div class="flex justify-center w-20 h-20">
+              <img  src="img/Emp-2.png" alt="">
+            </div>
+
+          </div>
+
+          </div>
+
+           <div class="p-[1px]  rounded-4xl w-100 h-40 bg-gradient-to-bl from-black via-black to-red-600" >
+
+          <div class="flex gap-3 flex-row justify-center items-center  rounded-4xl w-full h-full bg-black bg-gradient-to-tr from-black via-black to-red-900">
+            <div class="  gap-7 flex flex-col">
+              <p class="text-white text-xs font-normal opacity-40 text-base/5">
+                I gained practical, hands-on cybersecurity <br>knowledge through their programs.</p>
+              <p
+                class="text-white text-l font-normal opacity-70 text-base/5 ...">James Rizaki</p>
+            </div>
+          <!-- profiles -->
+            <div class="flex justify-center w-20 h-20">
+              <img  src="img/Emp-3.png" alt="">
+            </div>
+
+          </div>
+
+          </div>
+
+
+
       </div>
+
+
+
+
+
+    </div>
+
+
+     <!-- con-8 -->
+    <div class="flex  py-40 w-full justify-center  items-start  flex-row ">
+
+      <div class="flex flex-col justify-start items-start gap-3">
+
+        <!-- title -->
+        <div class="flex justify-center items-center">
+          <svg
+            width="120"
+            height="46"
+            viewBox="0 0 179 46"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M115.5 23.5234C115.5 11.6748 125.15 1.02344 136.421 1.02344M115.5 23.5234C115.5 11.6748 125.13 1.02344 136.421 1.02344M115.5 23.5234H1M115.5 23.5234C115.5 35.9497 125 45.0234 136.421 44.9769M115.5 23.5234C115.5 36.0234 125 45.0234 136.421 44.9769M136.421 1.02344H178.5M136.421 44.9769H178.5"
+              stroke="url(#paint0_linear_624_47022)"
+              stroke-linecap="round"
+            />
+            <defs>
+              <linearGradient
+                id="paint0_linear_624_47022"
+                x1="1.5"
+                y1="23.0002"
+                x2="178.5"
+                y2="23.0003"
+                gradientUnits="userSpaceOnUse"
+              >
+                <stop stop-color="#E0003B" stop-opacity="0" />
+                <stop offset="0.47" stop-color="#E0003B" />
+                <stop offset="1" stop-color="#E0003B" stop-opacity="0" />
+              </linearGradient>
+            </defs>
+          </svg>
+          <h2 class="text-white text-xs tracking-[.35em]">BLOGS</h2>
+
+          <svg
+            width="120"
+            height="46"
+            viewBox="0 0 179 46"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M63.5 23.5234C63.5 11.6748 53.8502 1.02344 42.5786 1.02344M63.5 23.5234C63.5 11.6748 53.8703 1.02344 42.5786 1.02344M63.5 23.5234H178M63.5 23.5234C63.5 35.9497 54 45.0234 42.5786 44.9769M63.5 23.5234C63.5 36.0234 54 45.0234 42.5786 44.9769M42.5786 1.02344H0.5M42.5786 44.9769H0.5"
+              stroke="url(#paint0_linear_624_47021)"
+              stroke-linecap="round"
+            />
+            <defs>
+              <linearGradient
+                id="paint0_linear_624_47021"
+                x1="177.5"
+                y1="23.0002"
+                x2="0.499966"
+                y2="23.0003"
+                gradientUnits="userSpaceOnUse"
+              >
+                <stop stop-color="#E0003B" stop-opacity="0" />
+                <stop offset="0.47" stop-color="#E0003B" />
+                <stop offset="1" stop-color="#E0003B" stop-opacity="0" />
+              </linearGradient>
+            </defs>
+          </svg>
+        </div>
+
+         <h1 class=" pb-4 bg-gradient-to-r from-slate-50 to-gray-500 bg-clip-text text-transparent text-5xl font- -tracking-[.1em] text-center pt-5">
+           PARTNER'S EXPERIENCES 
+        </h1>
+
+        <div class="w-90  h-1 bg-gradient-to-r from-gray-500 to-slate-50 opacity-50  "></div>
+
+          <p class="text-white pt-2 w-150 text-xs opacity-40 justify-end pr-20  ">Here, you’ll hear firsthand from users, cybersecurity pioneers, and tech enthusiasts who are shaping the future of digital security. Explore their stories and discover how we are transforming the way people protect, connect, and thrive in the digital world. </p>
+            <div class="pt-10">      
+              <a href="#">
+                <div class="button-wrapper ">
+                    <button class="button">CONTACT US</button>
+                </div>
+              </a>
+            </div>
+      </div>
+
+
+      <!-- prof-cards -->
+
+      <div class="flex pt-4  gap-4 flex-col justify-end w-150 items-end ">
+
+         <div class="p-[1px]  rounded-4xl w-100 h-40 bg-gradient-to-bl from-black via-black to-red-600" >
+
+          <div class="flex gap-3 flex-row justify-center items-center  rounded-4xl w-full h-full bg-black bg-gradient-to-tr from-black via-black to-red-900">
+            <div class="  gap-7 flex flex-col">
+              <p class="text-white text-xs font-normal opacity-40 text-base/5">
+                Their advanced solutions made <br> protecting our systems easier than ever.
+              </p>
+              <p
+                class="text-white text-l font-normal opacity-70 text-base/5 ..."
+              >
+                Samantha Leonardo              </p>
+            </div>
+          <!-- profiles -->
+            <div class="flex justify-center w-20 h-20">
+              <img  src="img/Emp-1.png" alt="">
+            </div>
+
+          </div>
+
+          </div>
+
+          <div class="p-[1px]  rounded-4xl w-100 h-40 bg-gradient-to-tl from-black via-black to-red-600" >
+
+          <div class="flex gap-3 flex-row justify-center items-center  rounded-4xl w-full h-full bg-black bg-gradient-to-br from-black via-black to-red-900">
+            <div class="  gap-7 flex flex-col">
+              <p class="text-white text-xs font-normal opacity-40 text-base/5">
+                Cyber Agency helped secure my company’s <br> data and strengthened customer trust.              </p>
+              <p
+                class="text-white text-l font-normal opacity-70 text-base/5 ...">James Rizaki</p>
+            </div>
+          <!-- profiles -->
+            <div class="flex justify-center w-20 h-20">
+              <img  src="img/Emp-2.png" alt="">
+            </div>
+
+          </div>
+
+          </div>
+
+           <div class="p-[1px]  rounded-4xl w-100 h-40 bg-gradient-to-bl from-black via-black to-red-600" >
+
+          <div class="flex gap-3 flex-row justify-center items-center  rounded-4xl w-full h-full bg-black bg-gradient-to-tr from-black via-black to-red-900">
+            <div class="  gap-7 flex flex-col">
+              <p class="text-white text-xs font-normal opacity-40 text-base/5">
+                I gained practical, hands-on cybersecurity <br>knowledge through their programs.</p>
+              <p
+                class="text-white text-l font-normal opacity-70 text-base/5 ...">James Rizaki</p>
+            </div>
+          <!-- profiles -->
+            <div class="flex justify-center w-20 h-20">
+              <img  src="img/Emp-3.png" alt="">
+            </div>
+
+          </div>
+
+          </div>
+
+
+
+      </div>
+
+
+
 
 
     </div>
